--- a/index.html
+++ b/index.html
@@ -1,109 +1,348 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>Aadhaar QR Scanner</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Aadhaar — QR Scanner & Decode</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+
   <style>
     body {
+      font-family: system-ui, Segoe UI, Roboto, Arial;
       background: linear-gradient(135deg, #6a11cb, #2575fc);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Segoe UI', sans-serif;
+      padding: 20px;
     }
 
     .scanner-card {
       background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-      padding: 25px;
-      max-width: 500px;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+      padding: 20px;
+      max-width: 650px;
       width: 100%;
     }
 
-    .btn-custom {
-      border-radius: 30px;
-      font-weight: 600;
-      padding: 10px 20px;
-      transition: 0.3s;
+    .scanner-header {
+      text-align: center;
+      font-weight: 700;
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+      color: #333;
     }
 
-    .btn-custom:hover {
-      transform: scale(1.05);
-    }
-
-    #status {
-      font-weight: 600;
-    }
-
-    .result-box {
-      background: #f1f5f9;
-      padding: 15px;
+    .scanner-container {
+      position: relative;
       border-radius: 12px;
-      margin-top: 15px;
-      font-size: 15px;
+      overflow: hidden;
+      background: #000;
     }
 
-    #reader {
-      border-radius: 15px;
-      overflow: hidden;
+    #video {
+      width: 100%;
+      height: auto;
+      display: none;
+    }
+
+    .overlay {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .scanner-box {
+      width: 240px;
+      height: 240px;
+      border: 3px solid #00ff99;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 255, 150, 0.7);
+      animation: glow 1.5s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        box-shadow: 0 0 10px rgba(0, 255, 150, 0.5);
+      }
+
+      to {
+        box-shadow: 0 0 25px rgba(0, 255, 150, 0.9);
+      }
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-left: 6px;
+    }
+
+    .ok {
+      background: #16a34a;
+    }
+
+    .bad {
+      background: #ef4444;
+    }
+
+    .decoded-card {
+      margin-top: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .decoded-card .card-header {
+      background: linear-gradient(135deg, #28a745, #20c997);
+      color: white;
+      font-weight: bold;
+    }
+
+    .highlight-name {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #155724;
     }
   </style>
+
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 </head>
 
 <body>
-  <div class="scanner-card text-center">
-    <h3 class="mb-3 text-primary fw-bold">Aadhaar QR Scanner</h3>
-    <div id="reader" style="width:100%;"></div>
+  <div class="scanner-card">
+    <div class="scanner-header">🔍 Aadhaar QR Scanner</div>
 
-    <div class="d-flex justify-content-center gap-3 mt-3">
-      <button id="startBtn" class="btn btn-success btn-custom">▶ Start Camera</button>
-      <button id="stopBtn" class="btn btn-danger btn-custom">⏹ Stop Camera</button>
+    <div class="scanner-container mb-3">
+      <video id="video" autoplay playsinline></video>
+      <div class="overlay">
+        <div class="scanner-box"></div>
+      </div>
     </div>
 
-    <p id="status" class="mt-3 text-muted">Status: <span class="text-dark">Idle</span></p>
+    <div class="d-flex flex-wrap gap-2 justify-content-center mb-2">
+      <button id="startBtn" class="btn btn-success px-4">▶ Start Camera</button>
+      <button id="stopBtn" class="btn btn-danger px-4" disabled>⏹ Stop Camera</button>
+      <input id="fileInput" type="file" accept="image/*" class="form-control" style="max-width:220px" />
+    </div>
 
-    <div class="result-box text-start">
-      <h6 class="fw-bold text-secondary">Decoded Data:</h6>
-      <pre id="decoded" class="mb-0">No data yet...</pre>
+    <p class="text-center small">
+      Status: <span id="statusText">idle</span>
+      <span id="statusDot" class="dot bad"></span>
+    </p>
+
+    <div id="decodedCard" class="card decoded-card d-none">
+      <div class="card-header">Decoded Aadhaar Data</div>
+      <div class="card-body">
+        <p class="highlight-name mb-3" id="firstWord">(no output yet)</p>
+        <table class="table table-sm mb-0">
+          <tbody id="outTable"></tbody>
+        </table>
+      </div>
+      <div class="card-footer d-flex gap-2" id="links"></div>
     </div>
   </div>
 
   <script>
-    const html5QrCode = new Html5Qrcode("reader");
-    const statusEl = document.getElementById("status");
-    const decodedEl = document.getElementById("decoded");
+    function bigIntDecimalToBytes(decStr) {
+      decStr = (decStr || "").replace(/\D/g, '');
+      if (!decStr) return new Uint8Array([]);
+      const bi = BigInt(decStr);
+      if (bi === 0n) return new Uint8Array([0]);
+      let hex = bi.toString(16);
+      if (hex.length % 2) hex = "0" + hex;
+      const u8 = new Uint8Array(hex.length / 2);
+      for (let i = 0; i < u8.length; i++) u8[i] = Number("0x" + hex.substr(i * 2, 2));
+      return u8;
+    }
 
-    document.getElementById("startBtn").addEventListener("click", () => {
-      html5QrCode.start(
-        { facingMode: "environment" },
-        { fps: 10, qrbox: 250 },
-        (decodedText) => {
-          decodedEl.innerText = decodedText;
-          statusEl.innerHTML = 'Status: <span class="text-success">QR Code Detected ✅</span>';
-        },
-        () => { }
-      ).then(() => {
-        statusEl.innerHTML = 'Status: <span class="text-primary">Camera Running...</span>';
-      }).catch(err => {
-        statusEl.innerHTML = `<span class="text-danger">Error: ${err}</span>`;
-      });
-    });
+    function tryDecompress(u8) {
+      try { return pako.ungzip(u8); } catch (e) { }
+      try { return pako.inflate(u8); } catch (e) { }
+      throw new Error("Decompress failed (not gzip/zlib).");
+    }
 
-    document.getElementById("stopBtn").addEventListener("click", () => {
-      html5QrCode.stop().then(() => {
-        statusEl.innerHTML = 'Status: <span class="text-warning">Camera Stopped</span>';
-      }).catch(err => {
-        statusEl.innerHTML = `<span class="text-danger">Error: ${err}</span>`;
-      });
+    function splitUntilFF(u8, count) {
+      const parts = []; let cursor = 0;
+      for (let i = 0; i < count; i++) {
+        const idx = u8.indexOf(0xFF, cursor);
+        if (idx === -1) throw new Error("Missing 0xFF delimiters while parsing text fields");
+        parts.push(u8.slice(cursor, idx));
+        cursor = idx + 1;
+      }
+      return { parts, cursor };
+    }
+
+    function parseUidaiBytes(decompressed) {
+      const FIELD_17 = ["version", "presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
+      const FIELD_16 = ["presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
+      let partsInfo, FIELD_ORDER;
+      try { partsInfo = splitUntilFF(decompressed, FIELD_17.length); FIELD_ORDER = FIELD_17; }
+      catch (e) { partsInfo = splitUntilFF(decompressed, FIELD_16.length); FIELD_ORDER = FIELD_16; }
+      const td = new TextDecoder("iso-8859-1");
+      const parts = partsInfo.parts;
+      const cursor = partsInfo.cursor;
+      const values = parts.map((p, i) => i === 0 ? td.decode(p).trim() : td.decode(p));
+      const data = {}; FIELD_ORDER.forEach((k, i) => data[k] = values[i] ?? "");
+      const SIGN_LEN = 256;
+      const sigStart = decompressed.length - SIGN_LEN;
+      let trailerEnd = sigStart;
+      const pres = Number(data.presenceBit || 0);
+      if (pres === 3) { trailerEnd -= 64; }
+      else if (pres === 2 || pres === 1) { trailerEnd -= 32; }
+      const photoBytes = decompressed.slice(cursor, trailerEnd);
+      return { data, photoBytes };
+    }
+
+    const video = document.getElementById("video");
+    const startBtn = document.getElementById("startBtn");
+    const stopBtn = document.getElementById("stopBtn");
+    const statusText = document.getElementById("statusText");
+    const statusDot = document.getElementById("statusDot");
+    const fileInput = document.getElementById("fileInput");
+    const outTable = document.getElementById("outTable");
+    const firstWord = document.getElementById("firstWord");
+    const decodedCard = document.getElementById("decodedCard");
+    const links = document.getElementById("links");
+
+    let stream = null, scanning = false, scanLoopHandle = null;
+    const canvas = document.createElement("canvas");
+    const ctx = canvas.getContext("2d");
+
+    function setStatus(s, ok) {
+      statusText.textContent = s;
+      statusDot.className = "dot " + (ok ? "ok" : "bad");
+    }
+
+    async function startCamera() {
+      if (stream) return;
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: "environment", width: { ideal: 1920 }, height: { ideal: 1080 } },
+          audio: false
+        });
+        video.srcObject = stream;
+        video.style.display = "block";
+        await video.play();
+        scanning = true;
+        startBtn.disabled = true; stopBtn.disabled = false;
+        setStatus("camera started", true);
+        scanLoop();
+      } catch (e) {
+        setStatus("camera error", false);
+        alert("Camera start failed: " + e.message);
+      }
+    }
+
+    function stopCamera() {
+      scanning = false;
+      if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
+      if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; }
+      video.pause(); video.srcObject = null; video.style.display = "none";
+      startBtn.disabled = false; stopBtn.disabled = true;
+      setStatus("camera stopped", false);
+    }
+
+    async function scanLoop() {
+      if (!scanning) return;
+      if (video.readyState === video.HAVE_ENOUGH_DATA) {
+        canvas.width = video.videoWidth; canvas.height = video.videoHeight;
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const code = jsQR(imgData.data, imgData.width, imgData.height, { inversionAttempts: "attemptBoth" });
+        if (code && code.data) { await onQRCodeFound(code.data); return; }
+        setStatus("scanning...", true);
+      }
+      scanLoopHandle = requestAnimationFrame(scanLoop);
+    }
+
+    async function onQRCodeFound(qrStr) {
+      scanning = false;
+      if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
+      stopCamera();
+      try {
+        const numeric = (qrStr.match(/[0-9]+/g) || []).join("");
+        if (!numeric) throw new Error("No numeric content found in QR");
+        const raw = bigIntDecimalToBytes(numeric);
+        const decompressed = tryDecompress(raw);
+        const parsed = parseUidaiBytes(decompressed);
+        const d = parsed.data;
+
+        const out = {
+          name: d.name || "",
+          dob: d.dob || "",
+          gender: d.gender || "",
+          careOf: d.careOf || "",
+          district: d.district || "",
+          landmark: d.landmark || "",
+          house: d.house || "",
+          location: d.location || "",
+          pincode: d.pincode || "",
+          postOffice: d.postOffice || "",
+          state: d.state || "",
+          street: d.street || "",
+          vtc: d.vtc || ""
+        };
+
+        firstWord.textContent = out.name || "Scanned";
+        outTable.innerHTML = "";
+        for (const [k, v] of Object.entries(out)) {
+          if (!v) continue;
+          const row = document.createElement("tr");
+          row.innerHTML = `<th class="text-capitalize">${k}</th><td>${v}</td>`;
+          outTable.appendChild(row);
+        }
+        decodedCard.classList.remove("d-none");
+
+        links.innerHTML = "";
+        const jsonBlob = new Blob([JSON.stringify(out, null, 2)], { type: "application/json" });
+        const jlink = document.createElement("a");
+        jlink.href = URL.createObjectURL(jsonBlob);
+        jlink.download = "aadhaar_decoded.json";
+        jlink.textContent = "Download JSON";
+        jlink.className = "btn btn-sm btn-outline-primary";
+        links.appendChild(jlink);
+
+        if (parsed.photoBytes && parsed.photoBytes.length > 0) {
+          const blob = new Blob([parsed.photoBytes], { type: "image/jp2" });
+          const a = document.createElement("a");
+          a.href = URL.createObjectURL(blob);
+          a.download = "aadhaar_photo.jp2";
+          a.textContent = "Download Photo";
+          a.className = "btn btn-sm btn-outline-secondary";
+          links.appendChild(a);
+        }
+
+        setStatus("decoded successfully", true);
+      } catch (err) {
+        firstWord.textContent = "Error: " + (err.message || String(err));
+        decodedCard.classList.remove("d-none");
+        setStatus("decode error", false);
+      }
+    }
+
+    startBtn.addEventListener("click", startCamera);
+    stopBtn.addEventListener("click", stopCamera);
+
+    fileInput.addEventListener("change", async ev => {
+      if (!ev.target.files || !ev.target.files[0]) return;
+      const img = new Image();
+      img.onload = async () => {
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+        const code = jsQR(ctx.getImageData(0, 0, canvas.width, canvas.height).data, canvas.width, canvas.height);
+        if (code && code.data) await onQRCodeFound(code.data);
+        else alert("No QR detected in image.");
+      };
+      img.src = URL.createObjectURL(ev.target.files[0]);
     });
   </script>
 </body>
-
 </html>
